# http-log-anonymizer

./: .envrc  .gitattributes  .gitignore  docker-compose.yml
anonymizer/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.tpl  build.rs
anonymizer/src/: config.rs  error.rs  http_log.rs  kafka.rs  lib.rs  limiter.rs  main.rs  sink.rs  source.rs  telemetry.rs
etc/loki/: local-config.yml
etc/prometheus/: prometheus.yml
grafana/dashboards/: grafana_dashboard_anonymizer_performance.json
grafana/provisioning/datasources/: datasource.yaml
