[package]
name = "anonymizer"
version = "0.3.0"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
description = "GDPR-complient Kafka-to-ClickHouse ETL pipeline for HTTP logs"
repository = "https://github.com/matyama/http-log-anonymizer"
keywords = ["kafka", "clickhouse", "etl-pipeline", "gdpr"]
edition = "2021"
build = "build.rs"

[lib]
name = "anonymizer"
path = "src/lib.rs"

[[bin]]
name = "anonymizer"
path = "src/main.rs"

# TODO: rdkafka - add `features = ["dynamic-linking"] ` for `librdkafka` in Docker build

[dependencies]
anyhow = "1.0"
capnp = "0.15"
clickhouse-format = "0.2"
clickhouse-http-client = "0.1"
config = "0.13"
derive-new = "0.5"
futures = "0.3"
hyper = { version = "0.14", default-features = false, features = ["http1", "server", "runtime"] }
itertools = "0.10"
maplit = "1.0"
prometheus = { version = "0.13", features = ["process"] }
prometheus-hyper = "0.1"
prometheus-metric-storage = "0.5"
retry = "2.0"
rdkafka = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1"
stream-cancel = "0.8"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-graceful-shutdown = "0.12"
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3", features=["serde"] }

[build-dependencies]
capnpc = "0.15"

[dev-dependencies]
rstest = "0.16"

