[package]
name = "anonymizer"
version = "0.4.1"
authors = ["Martin Matyášek <martin.matyasek@gmail.com>"]
description = "GDPR-complient Kafka-to-ClickHouse ETL pipeline for HTTP logs"
repository = "https://github.com/matyama/http-log-anonymizer"
keywords = ["kafka", "clickhouse", "etl-pipeline", "gdpr"]
edition = "2021"
build = "build.rs"

[lib]
name = "anonymizer"
path = "src/lib.rs"

[[bin]]
name = "anonymizer"
path = "src/main.rs"

# allow for maximum size reduction optimizations
[profile.release-min]
inherits = "release"
strip = true
lto = true
codegen-units = 1

# NOTE: `rdkafka` should not enable the `dynamic-linking` feature
#  - This is because we want a fully static binary for the Docker build which
#    cross-compiles to musl target and run the binary in an Alpine image
#  - https://github.com/LukeMathWalker/cargo-chef#running-the-binary-in-alpine

# NOTE: `prometheus-hyper` does not export `hyper` itself, hence the dependency

[dependencies]
anyhow = "1.0"
capnp = { version = "0.15", features = ["unaligned"] }
clickhouse-format = "0.2"
clickhouse-http-client = "0.1"
config = "0.13"
derive-new = "0.5"
futures-util = "0.3"
hyper = { version = "0.14", default-features = false }
itertools = "0.10"
maplit = "1.0"
prometheus = { version = "0.13", features = ["process"] }
prometheus-hyper = "0.1"
prometheus-metric-storage = "0.5"
retry = { version = "2.0", default-features = false }
rdkafka = { version = "0.29", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.1"
stream-cancel = "0.8"
thiserror = "1.0"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread", "time", "macros", "sync"] }
tokio-graceful-shutdown = "0.12"
tracing = "0.1"
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.3", features=["serde"] }

[build-dependencies]
capnpc = "0.15"

[dev-dependencies]
rstest = "0.16"

